Refactor application-prod.properties for new settings
Updated application properties for production environment with new database and security configurations, including default values for server port and admin credentials.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,21 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+# Render port (ÇOK ÖNEMLİ)
+server.port=${PORT:8080}
+
+# DB (Render env isimleriyle birebir)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.security.user.name=${ADMIN_USER}
-spring.security.user.password=${ADMIN_PASS}
+# Admin (default ekledim ki boş kalırsa patlamasın)
+spring.security.user.name=${ADMIN_USER:admin}
+spring.security.user.password=${ADMIN_PASS:admin123}
 spring.security.user.roles=ADMIN
 
-app.jwt.secret=${JWT_SECRET}
+# JWT (default ekledim; yoksa yine patlar)
+app.jwt.secret=${JWT_SECRET:CHANGE_ME_TO_A_LONG_RANDOM_SECRET_64CHARS_MIN}
 app.jwt.ttlMinutes=60
 
 server.error.include-message=never
@@ -20,3 +26,4 @@ logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=OFF
 logging.level.org.hibernate.orm.jdbc.bind=OFF
+
